# likemark-backend

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  design.xml  log.txt
notes/: files.yaml
res/: BOOKMARKT.db
res/bookmark_file/: bookmark_chrome.html  bookmark_safari.html
res/bookmark_files/: bookmark_chrome.html
res/sql/bookmark/: delete.sql  init.sql  init_test.sql  insert.sql  list.sql  read.sql  update.sql
res/sql/entity/: delete.sql  init.sql  init_test.sql  insert.sql  list.sql  read.sql  update.sql
res/sql/link/: delete.sql  init.sql  init_test.sql  insert.sql  list.sql  read.sql  update.sql
res/sql/node/: delete.sql  init.sql  init_test.sql  insert.sql  list.sql  read.sql  update.sql
res/test/: db_tab1.sqlite  test_entity.sql  test_node.sql
res/yaml/: bookmark.yaml  cli.yaml  cli_logo.flf
src/: lib.rs  main.rs
src/common/: bookmark.rs  criteria.rs  entity.rs  entity_t.rs  global_macros.rs  link.rs  link_criteria.rs  mod.rs  node.rs  tree_id.rs  types.rs  utils.rs
src/common/deep/: mod.rs  traversal.rs  tree_path.rs
src/common/model/: composite.rs  link.rs  mod.rs  node.rs
src/core/: mod.rs  server.rs
src/core/api/: base.rs  body.rs  header.rs  mod.rs
src/core/logic/: html_parser.rs
src/core/services/: bookmark_services.rs  mod.rs
src/dao/: base.rs  bookmark.rs  bookmark_dao.rs  dao.rs  entity_dao.rs  link_dao.rs  mod.rs  node_dao.rs  query.rs  query_parser.rs  sql_config.rs
src/dao/test/: mod.rs  (+3 more)
src/logic/: services.rs
tests/: lib.rs
tests/core/: mod.rs
tests/dao/: db_wrapper.rs  link.rs  mod.rs  node.rs
(+1 files in other folders)
