[package]
name = "bookmarkt"
version = "0.1.0"
authors = ["team-chiru <team-chiru@protonmail.com>"]


[dependencies]
rusqlite = "0.6"
chrono = "*"
yaml-rust = "*"
regex = "*"
log="*"
env_logger="*"
derive_builder="*"

hyper = "0.11.1"
iron="*"
unicase="*"
params="*"
uuid = { version = "*", features = ["serde", "v4"] }

serde = "*"
serde_derive="*"
serde_json="*"
valico = "1.0.1"

[dependencies.rustless]
git = "https://github.com/rustless/rustless"
