[package]
name = "bookmarkt"
version = "0.1.0"
authors = ["team-chiru <team-chiru@protonmail.com>"]


[dependencies]
rusqlite = "0.6"
chrono = "*"
yaml-rust = "*"
regex = "*"
log="*"
env_logger="*"
derive_builder="*"


iron="*"
unicase = "1.4.2" #FIXME >=2.0.0 versions has hyper incompatibility
params="*"
uuid = { version = "*", features = ["serde", "v4"] }

serde = "*"
serde_derive="*"
serde_json="*"
valico = "1.0.1"

[dependencies.rustless]
git = "https://github.com/rustless/rustless"
